--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,24 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
+  fluro: ^1.7.7
+  flutter_swiper: ^1.1.6
+  flutter_screenutil: ^1.0.2
+  shared_preferences: ^0.5.7+3
+  dio: ^3.0.9
+  flutter_spinkit: ^4.1.2
+  provider: ^4.3.2
+  cached_network_image: ^2.2.0+1
+  fluttertoast: ^4.0.1
+  pull_to_refresh: ^1.6.2
+  flutter_widget_from_html_core: ^0.4.1
+  tuple: ^1.0.3
+  flutter_html: ^0.10.4
+  flutter_slidable: ^0.5.7
+  common_utils: ^1.2.1
+  event_bus: ^1.1.1
+  device_preview: ^0.4.8
+
 
 dev_dependencies:
   flutter_lints: ^1.0.4
